src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');

:root {
  --tmdb-blue: #0d253f;
  --tmdb-light-blue: #01b4e4;
}

* {
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

a {
  text-decoration: none;
}

a:visited { text-decoration: none; color:var(--tmdb-light-blue); }

li {
  list-style-type: none;
}

.no-cursor {
  cursor: not-allowed;
}

.container {
  padding: 48px 16px;
}

.row {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}

.text--blue {
  color: var(--tmdb-light-blue);
}

.link__hover-effect {
  position: relative;
}

.link__hover-effect:after {
  content: "";
  position: absolute;
  bottom: -3px;
  right:0;
  height: 3px;
  width: 0;
  background-color: black;
  transition: all 300ms ease;
}

.link__hover-effect:hover:after {
  left: 0;
  width: 100%;
}

.link__hover-effect--white:after {
  background-color: white;
}

main {
  min-height: calc(100vh - 92px - 76px);
}

/* 

NAV

*/

nav {
  background-color: var(--tmdb-blue);
}

.nav__container {
  display: flex;
  justify-content: space-between;
  align-items: center; 
  padding: 24px 16px;
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  
}

.nav__img--wrapper {
  cursor: pointer;
}

.nav__img {
  height: 40px;
}


.nav__links {
  display: flex;
  align-items: center;
}

.nav__link {
  margin-right: 36px;
}

.nav__link:last-child {
  margin-right: 0px;
}

.nav__link--anchor {
  color: white;
  font-size: 16px;
  font-weight: 700;
}

.btn-contact {
  padding: 12px 24px;
  background-color: #01b4e4;
  border-radius: 9999px;
  transition: all 300ms ease;
}

.btn-contact:hover {
  background-color: #01b3e4bb;
}




/* 

header

*/

.header__container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header__title {
  font-size: 50px;
  text-align: center;
  padding: 0 8px;
  max-width: 900px;
}

.header__para {
  font-size: 24px;
  font-weight: 300;
  margin-bottom: 60px;
}

.search-bar--wrapper {
  width: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.search-bar__btn {
  font-size: 1.2em;
  cursor: pointer;
  position: absolute;
  right: 20px;
}

.search-bar {
  width: 100%;
  padding: 16px 16px 16px 32px;
  border-radius: 9999px;
  font-weight: 500;
  font-size: 16px;
  border: 2px solid #e5e7eb;
  outline: none;
  transition: all 300ms ease;
}

.search-bar:focus {
  border: 2px solid #01b4e4;
}

.header__search-options {
  display: flex;
  flex-direction: row;
  gap: 45px;
  margin-top: 32px;
}

.search-option__link {
  padding: 16px 8px;
  color: white;
  font-weight: 500;
  background-color: var(--tmdb-light-blue);
  border-radius: 8px;
  cursor: pointer;
  transition: 300ms;
}

.search-option__link:hover {
  background-color: #01b3e4bb;
}

/* 

Movie search results

*/

.movie__header {
  display: flex;
  justify-content: space-between;
  margin-left: 32px;
  margin-right: 32px;
  padding: 20px 0;
}

#movie-selector {
  padding: 4px 8px;
}

.movies {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.movie {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 8px;
  margin: 16px;
  width: calc(90% / 3);
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  border-radius: 10px;
  transition: 300ms;
  cursor: pointer;
}

.movie:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
}

.movie__img--wrapper {
  width: 90%;
  margin: auto 0;
  /* margin: 0 auto; */
}

.movie__img {
  width: 100%;
}

.movie__info {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  text-align: center;
  color: black;
}


.skeleton__img {
  background-color: lightgray;
  width: 100%;
  height: 169px;
}

.skeleton__title {
  margin-top: 4px;
  background-color: lightgray;
  width: 190px;
  height: 19px;
}

.skeleton__rating {
  margin-top: 4px;
  background-color: lightgray;
  width: 100px;
  height: 19px;
}

.no-img {
  display: flex;
  align-items: center;
  justify-content: center;
  color: black;
}

/* 

No result found

*/

.no-result {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 16px;
  margin: 0 auto;
}

.no-result__img {
  width: 50%;
}

.no-result__para {
  font-weight: 500;
  color: red;
  font-size: 1.1rem;
  text-align: center;
}

/* 

MovieDetail

*/

.MovieDetail__container {
  min-height: calc(100vh - 92px - 76px);
}

.btn--back {
  display: flex;
  align-items: center;
  font-size: 32px;
  font-weight: 500;
  color: black;
  margin-bottom: 32px;
}

.MovieDetail--wrapper {
  display: flex;
  justify-content: center;
  gap: 24px;
}

.MovieDetail__details {
  width: 50%;
  max-width: 400px;
  transition: 300ms;
}

.MovieDetail__img {
  width: 100%;
  max-width: 500px;
}

.MovieDetail__title {
  font-size: 2rem;
  margin-bottom: 16px;
}

.MovieDetail__release-date,
.MovieDetail__runtime,
.MovieDetail__vote,
.MovieDetail__genre {
  font-size: 1.1rem;
  margin-bottom: 8px;
}

.MovieDetail__summary__title {
  font-size: 1.4rem;
  padding-top: 8px;
  padding-bottom: 4px;
}

.MovieDetail__summary__para {
  padding-bottom: 16px;
}

.MovieDetail__imdb-logo {
  font-size: 2.5rem;
}

.MovieDetail__imdb-logo:hover {
  transform: translateY(-5px);
}

/* SKELETON MOVIEDETAIL */

.MovieDetail__img--skeleton {
  width: 100%;
  max-width: 500px;
  height: 700px;
  background-color: lightgray;
}

.MovieDetail__title--skeleton {
  width: 70%;
  height: 42px ;
  margin-top: 8px;
  margin-bottom: 16px;
  background-color: lightgray;
}

.MovieDetail__release-date--skeleton {
  width: 50%;
  height: 34px ;
  margin-bottom: 4px;
  background-color: lightgray;
}

.MovieDetail__runtime--skeleton {
  width: 40%;
  height: 34px ;
  margin-bottom: 4px;
  background-color: lightgray;
}

.MovieDetail__vote--skeleton {
  width: 40%;
  height: 34px ;
  margin-bottom: 4px;
  background-color: lightgray;
}

.MovieDetail__genre--skeleton {
  width: 80%;
  height: 34px ;
  margin-bottom: 4px;
  background-color: lightgray;
}

.MovieDetail__summary__title--skeleton {
  width: 30%;
  height: 34px ;
  margin-bottom: 4px;
  background-color: lightgray;
}

.MovieDetail__summary__para--skeleton {
  width: 100%;
  height: 100px ;
  margin-bottom: 4px;
  background-color: lightgray;
}

/* 

Footer

*/

footer {
  padding: 27px 32px;
  background-color: var(--tmdb-blue);
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer__copyright {
  color: var(--tmdb-light-blue);
  font-size: 18px;
}



/* 

media queries

*/

@media(max-height: 1200px) {
  .header__img {
    height: 300px;
  }
}

@media(max-width: 1000px) {
  .movie {
    width: calc(90% / 2);
  }
}

@media(max-width: 670px) {
  .movie {
    width: 100%;
  }
  .nav__img {
    height: 30px;
  }
  .movie__header {
    flex-direction: column;
    gap: 16px;
    align-items: center;
  }
  .MovieDetail__img {
    width: 70%;
  }
  .MovieDetail__img--skeleton {
    width: 70%;
    height: 537px;
  }
  .MovieDetail--wrapper {
    flex-direction: column;
    align-items: center;
  }
}

@media(max-width: 460px) {
  .nav__img {
    height: 15px;
  }
  .header__title {
    font-size: 40px;
  }
  .search-bar {
    padding: 16px 16px 16px 16px;
  }
  .search-bar--wrapper {
    width: 90%;
  }
  .header__img {
    height: 300px;
  }
  .MovieDetail__img--skeleton {
    height: 400px;
  }
}

